[package]
name = "specker"
version = "0.3.5"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nercury/specker-rs"
documentation = "https://docs.rs/specker/"
description = "Testing utility that simplifies file matching against bunch of templates."
readme = "README.md"
keywords = ["spec", "testing", "utility", "dev"]
categories = ["development-tools::testing"]

[dependencies]
walkdir = "2"

[badges]
travis-ci = { repository = "Nercury/specker-rs" }